--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -2,16 +2,17 @@
   <div class="row">
     <div class="col text-center">
       <p class="footer-distributed">
-        <img id="avatar" alt="BC Developers' Exchange" height="45px;" src="/modules/core/client/img/logo/avatar.svg">
-        © 2018 BC Developers' Exchange
+        <img id="avatar" alt="BC Developers' Exchange" height="45px;" src="/modules/core/client/img/brand/favicon.png">
+        © 2019 Sovrin Foundation Developers' Exchange
       </p>
     </div>
   </div>
   <div class="row">
     <div class="col text-center">
       <p class="footer-distributed">
-        <a id="ForkThisSite" href="https://github.com/BCDevExchange/devex" target="_blank" analytics-on="" analytics-event="click"
-          analytics-category="outbound" analytics-label="github.com/BCDevExchange"><i class="fas fa-code-branch"></i>
+        <a id="ForkThisSite" href="https://github.com/BCDevExchange/devex" target="_blank" analytics-on=""
+           analytics-event="click"
+           analytics-category="outbound" analytics-label="github.com/BCDevExchange"><i class="fas fa-code-branch"></i>
           Fork this site</a>
         &nbsp; &nbsp;
         <a href="mailto:bcdevexchange@gov.bc.ca?" analytics-on=""><i class="fas fa-envelope"></i> Say hi!</a>
@@ -37,11 +38,11 @@
       </p>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col text-center">
-      <a href="http://www2.gov.bc.ca/" id="Supported by the Province of British Columbia"><img src="/modules/core/client/img/logo/BCID-supported-rev.svg"
-          height="80px;" alt="Supported by the Province of British Columbia" style="max-width: 120px"></a>
-    </div>
-  </div>
+  <!-- TODO: // Do we need this footer? -->
+  <!--  <div class="row">-->
+  <!--    <div class="col text-center">-->
+  <!--    <a href="http://www2.gov.bc.ca/" id="Supported by the Province of British Columbia"><img src="/modules/core/client/img/logo/BCID-supported-rev.svg"-->
+  <!--                                                                                             height="80px;" alt="Supported by the Province of British Columbia" style="max-width: 120px"></a>-->
+  <!--  </div>-->
+  <!--  </div>-->
 </div>
