--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <div class="container" ng-controller="HeaderController as vm">
     <div class="navbar-header">
-      <a href="/" id="home"><img class="navbar-brand" src="/modules/core/client/img/logo/new-logo-white.svg" alt="BCDevExchange"
+      <a href="/" id="home"><img class="navbar-brand" src="/modules/core/client/img/logo/sovrin_logo.png" alt="SovrinDevExchange"
           ui-sref="home"></a>
       <button type="button" class="navbar-toggler" ng-click="vm.isCollapsed = !vm.isCollapsed">
         <span class="navbar-toggler-icon"></span>
