--- a/modules/orgs/client/views/org-add.html
+++ b/modules/orgs/client/views/org-add.html
@@ -4,7 +4,7 @@
       <div class="bg-light rounded px-4 py-3 font-weight-bold">
         <div class="row">
           <div class="col">
-            Register Your Company on the BCDevExchange
+            Register Your Company on the Sovrin DevExchange
           </div>
         </div>
       </div>
