--- a/modules/users/client/views/settings/profile-privacy.html
+++ b/modules/users/client/views/settings/profile-privacy.html
@@ -21,6 +21,6 @@
 
 <h5>Privacy</h5>
 <p class="small">
-	Your personal information is being collected by the Ministry of Citizens’ Services under s.26(c) of the Freedom of Information and Protection of Privacy Act (FOIPPA). The collection, use and disclosure of your personal information is for the purpose of notifying, applying and awarding opportunities on the BCDevExchange. If you have any questions, please contact: Peter Watkins, Executive Director, BC Developers’ Exchange and DevOps, Ministry of Citizens’ Services, 250-514-2739.
+	Your personal information is being collected by the Ministry of Citizens’ Services under s.26(c) of the Freedom of Information and Protection of Privacy Act (FOIPPA). The collection, use and disclosure of your personal information is for the purpose of notifying, applying and awarding opportunities on the Sovrin DevExchange. If you have any questions, please contact: Peter Watkins, Executive Director, BC Developers’ Exchange and DevOps, Ministry of Citizens’ Services, 250-514-2739.
 </p>
 <p><a href="/terms/user1" target="_blank"><i class="fas fa-download"></i> Terms of Use</a></p>
