--- a/modules/opportunities/client/views/cwu-opportunity-view.html
+++ b/modules/opportunities/client/views/cwu-opportunity-view.html
@@ -23,21 +23,27 @@
   <!-- // If user doesn't have an email address in their profile // -->
   <div class="container" ng-if="vm.notifyMe && !vm.hasEmail">
     <div class="alert alert-warning">
-      <p>Want <span class="hidden-sm hidden-xs">to get </span>updates about this opportunity? <a href id="settings.profile"
-          ui-sref="settings.profile"> Add your email address.</a></p>
+      <p>Want <span class="hidden-sm hidden-xs">to get </span>updates about this opportunity? <a href
+                                                                                                 id="settings.profile"
+                                                                                                 ui-sref="settings.profile">
+        Add your email address.</a></p>
     </div>
   </div>
 
   <!-- View for approving/rejecting an opportunity -->
   <div class="container">
-    <div class="row alert justify-content-center" ng-if="vm.showPreApproval || vm.showFinalApproval" ng-class="{'alert-success': vm.approvalAction === 'Approve', 'alert-danger': vm.approvalAction === 'Reject'}">
+    <div class="row alert justify-content-center" ng-if="vm.showPreApproval || vm.showFinalApproval"
+         ng-class="{'alert-success': vm.approvalAction === 'Approve', 'alert-danger': vm.approvalAction === 'Reject'}">
       <div class="col-md-6 text-center margin-auto">
         To {{ vm.approvalAction }} this opportunity, enter the 6 digit code you have been sent separately (<a href=""
-          ng-click="vm.requestApprovalCode()">Resend</a>)<br>
+                                                                                                              ng-click="vm.requestApprovalCode()">Resend</a>)<br>
         <input class="form-control mx-auto text-center my-2" type="number" input-max-length="6" ng-model="vm.twoFACode"
-          ng-change="vm.validateApprovalCode()">
-        <button class="btn text-white my-2" ng-class="{'btn-success': vm.approvalAction === 'Approve', 'btn-danger': vm.approvalAction === 'Reject'}"
-          type="button" ng-click="vm.submitApprovalCode()" ng-disabled="vm.validApprovalCode">{{ vm.approvalAction }}</button>
+               ng-change="vm.validateApprovalCode()">
+        <button class="btn text-white my-2"
+                ng-class="{'btn-success': vm.approvalAction === 'Approve', 'btn-danger': vm.approvalAction === 'Reject'}"
+                type="button" ng-click="vm.submitApprovalCode()" ng-disabled="vm.validApprovalCode">{{ vm.approvalAction
+          }}
+        </button>
       </div>
     </div>
   </div>
@@ -49,7 +55,7 @@
     <div class="row" ng-if="vm.opportunity.status === 'Pending' && vm.canEdit && vm.opportunity.isPublished">
       <div class="col border p-4">
         <proposal-list isclosed="vm.isClosed()"
-          context="opportunity" opportunity="vm.opportunity"></proposal-list>
+                       context="opportunity" opportunity="vm.opportunity"></proposal-list>
       </div>
     </div>
 
@@ -58,21 +64,25 @@
       <div class="col text-center">
         <span class="text-black-50">Opportunity assigned to:</span>
         &nbsp;
-        <img ng-if="!vm.opportunity.proposal.isCompany" class="img-avatar-flat img-avatar-sm" src="{{((vm.opportunity.proposal.user.profileImageURL.substr(0,1) == '/' || vm.opportunity.proposal.user.profileImageURL.substr(0,4) == 'http') ? '' : '/') + vm.opportunity.proposal.user.profileImageURL}}">
+        <img ng-if="!vm.opportunity.proposal.isCompany" class="img-avatar-flat img-avatar-sm"
+             src="{{((vm.opportunity.proposal.user.profileImageURL.substr(0,1) == '/' || vm.opportunity.proposal.user.profileImageURL.substr(0,4) == 'http') ? '' : '/') + vm.opportunity.proposal.user.profileImageURL}}">
         &nbsp;
         <span ng-if="!vm.opportunity.proposal.isCompany">{{vm.opportunity.proposal.user.displayName}}</span>
         <span ng-if="vm.opportunity.proposal.isCompany">{{vm.opportunity.proposal.businessName}}</span>
         &nbsp;&nbsp;&nbsp;
-        <a id="proposals.view" ng-if="vm.canEdit || vm.isMember" ui-sref="proposals.viewcwu({ proposalId: vm.opportunity.proposal._id })">View
+        <a id="proposals.view" ng-if="vm.canEdit || vm.isMember"
+           ui-sref="proposals.viewcwu({ proposalId: vm.opportunity.proposal._id })">View
           Proposal</a>&nbsp;&nbsp;
         <button class="btn btn-sm btn-text-only" ng-if="vm.canEdit" ng-click="vm.unassign()"><i class="fas fa-ban"></i>
-          Unassign</button>
+          Unassign
+        </button>
       </div>
     </div>
     <br>
     <div class="row">
       <div class="col text-center" ng-if="vm.canEdit && vm.isClosed()">
-        <a href="/api/opportunities/{{vm.opportunity._id}}/proposalArchive" target="_blank"><i class="fas fa-file-archive"></i>
+        <a href="/api/opportunities/{{vm.opportunity._id}}/proposalArchive" target="_blank"><i
+          class="fas fa-file-archive"></i>
           Download Proposals Archive</a>
       </div>
     </div>
@@ -82,7 +92,8 @@
 
   <div class="container">
     <!-- // Admin View / if opportunity is in DRAFT and INCOMPLETE // -->
-    <div class="row" ng-if="!vm.canPublish() && !vm.opportunity.isPublished && vm.canEdit && !vm.isClosed() && vm.errorFields.length > 0">
+    <div class="row"
+         ng-if="!vm.canPublish() && !vm.opportunity.isPublished && vm.canEdit && !vm.isClosed() && vm.errorFields.length > 0">
       <div class="col alert alert-warning">
         <span class="strong"><i class="fas fa-exclamation-triangle"></i> Your opportunity is missing stuff!</span>
         Before you can publish, you'll need to define these things:
@@ -92,37 +103,43 @@
       </div>
     </div>
 
-    <div class="row align-items-end" ng-if="vm.opportunity.approvalRequired && !vm.opportunity.isApproved && vm.canEdit && !vm.opportunity.isPublished && !vm.isClosed()">
+    <div class="row align-items-end"
+         ng-if="vm.opportunity.approvalRequired && !vm.opportunity.isApproved && vm.canEdit && !vm.opportunity.isPublished && !vm.isClosed()">
       <div class="col alert alert-warning">
         <span class="strong"><i class="fas fa-exclamation-triangle"></i> Approval is required to publish this
           opportunity.</span>
         <span ng-if="!vm.opportunity.intermediateApproval.initiated"> You have not yet sent an approval request.</span>
         <span ng-if="vm.opportunity.intermediateApproval.initiated">
-          <span ng-if="vm.opportunity.intermediateApproval.action === 'pending' || (vm.opportunity.intermediateApproval.actioned && vm.opportunity.finalApproval.action === 'pending')">You
+          <span
+            ng-if="vm.opportunity.intermediateApproval.action === 'pending' || (vm.opportunity.intermediateApproval.actioned && vm.opportunity.finalApproval.action === 'pending')">You
             have an approval request pending and will be notified once it is actioned.</span>
-          <span ng-if="vm.opportunity.intermediateApproval.action === 'denied' || vm.opportunity.finalApproval.action === 'denied'">Your
+          <span
+            ng-if="vm.opportunity.intermediateApproval.action === 'denied' || vm.opportunity.finalApproval.action === 'denied'">Your
             approval request was denied. If you feel this was in error, please contact an administrator.</span>
         </span>
       </div>
       <div class="col-4 float-right pr-0 my-3">
         <button type="button" class="btn btn-danger float-right" ng-if="vm.isAdmin" ng-click="vm.bypassApproval()"
-          uib-tooltip="(Admin Only) This will allow the opportunity to be published without ADM approval">
+                uib-tooltip="(Admin Only) This will allow the opportunity to be published without ADM approval">
           Bypass Approval
         </button>
       </div>
     </div>
 
-    <div class="row" ng-if="vm.opportunity.approvalRequired && vm.opportunity.isApproved && vm.canEdit && !vm.opportunity.isPublished && !vm.isClosed()">
+    <div class="row"
+         ng-if="vm.opportunity.approvalRequired && vm.opportunity.isApproved && vm.canEdit && !vm.opportunity.isPublished && !vm.isClosed()">
       <div class="col alert alert-success">
         <span><i class="fas fa-check-circle"></i> You have been approved to publish this opportunity!</span>
         <span class="float-right"><a href="" ng-click="vm.exportApprovalRecord()">Export Approval Record</a></span>
-        <img id='imgToExport' src="/modules/core/client/img/logo/new-logo.png" style='display:none'/> 
+        <img id='imgToExport' src="/modules/core/client/img/logo/new-logo.png" style='display:none'/>
       </div>
     </div>
 
-    <div class="row" ng-if="vm.isAdmin && !vm.opportunity.approvalRequired && !vm.opportunity.isPublished && !vm.isClosed()">
+    <div class="row"
+         ng-if="vm.isAdmin && !vm.opportunity.approvalRequired && !vm.opportunity.isPublished && !vm.isClosed()">
       <div class="col pr-0 my-3">
-        <button type="button" class="btn btn-danger float-right" ng-click="vm.reinstateApproval()" uib-tooltip="(Admin Only) This will reinstate the approval requirement needed to publish">
+        <button type="button" class="btn btn-danger float-right" ng-click="vm.reinstateApproval()"
+                uib-tooltip="(Admin Only) This will reinstate the approval requirement needed to publish">
           Reinstate Approval Requirement
         </button>
       </div>
@@ -143,35 +160,38 @@
     <div class="opp-detail-header">
       Published on <span ng-bind="vm.formatDate(vm.opportunity.lastPublished, false)"></span>
       <br>
-      Last updated on <span ng-bind="vm.formatDate(vm.opportunity.updated, false)"></span> by <span ng-if="vm.opportunity.updatedBy"
-        ng-bind="vm.opportunity.updatedBy.displayName"></span><span ng-if="!vm.opportunity.updatedBy">Deleted User</span>
+      Last updated on <span ng-bind="vm.formatDate(vm.opportunity.updated, false)"></span> by <span
+      ng-if="vm.opportunity.updatedBy"
+      ng-bind="vm.opportunity.updatedBy.displayName"></span><span ng-if="!vm.opportunity.updatedBy">Deleted User</span>
 
       <!-- // Opportunity Admin control buttons // -->
 
       <!-- PUBLISH (if opportunity is in DRAFT and COMPLETE) -->
-      <button data-automation-id="button-opportunity-publish" ng-if="vm.canPublish() && vm.canEdit && !vm.opportunity.isPublished"
-        class="btn btn-primary float-right" ng-click="vm.publish(true)" title="Publish this Opportunity"><i
-          class="fas fa-bullhorn"></i> Publish</button>
+      <button data-automation-id="button-opportunity-publish"
+              ng-if="vm.canPublish() && vm.canEdit && !vm.opportunity.isPublished"
+              class="btn btn-primary float-right" ng-click="vm.publish(true)" title="Publish this Opportunity"><i
+        class="fas fa-bullhorn"></i> Publish
+      </button>
 
       <!-- EDIT -->
-      <a data-automation-id="btnEditOpportunity" class="btn btn-text-only float-right" ng-if="vm.canEdit" ui-sref="opportunityadmin.editcwu({opportunityId:vm.opportunity.code})"
-        uib-tooltip="Edit this Opportunity">
+      <a data-automation-id="btnEditOpportunity" class="btn btn-text-only float-right" ng-if="vm.canEdit"
+         ui-sref="opportunityadmin.editcwu({opportunityId:vm.opportunity.code})"
+         uib-tooltip="Edit this Opportunity">
         <i class="fas fa-pencil-alt"></i>
       </a>
 
       <!-- WATCH -->
-      <a class="btn btn-text-only float-right" ng-if="vm.hasEmail && !vm.isClosed()" ng-class="{'text-primary': vm.isWatching, 'text-secondary': !vm.isWatching }"
-        uib-tooltip="Youll get an email if this opportunity changes" ng-click="vm.toggleWatch()">
+      <a class="btn btn-text-only float-right" ng-if="vm.hasEmail && !vm.isClosed()"
+         ng-class="{'text-primary': vm.isWatching, 'text-secondary': !vm.isWatching }"
+         uib-tooltip="Youll get an email if this opportunity changes" ng-click="vm.toggleWatch()">
         <i class="fas fa-eye"></i>
       </a>
 
       <!-- UNPUBLISH (if opportunity is PUBLISHED) -->
       <a data-automation-id="button-opportunity-unpublish" href="" ng-if="vm.canEdit && vm.opportunity.isPublished"
-        class="btn btn-text-only float-right" ng-click="vm.publish(false)" uib-tooltip="Unpublish Opportunity">
+         class="btn btn-text-only float-right" ng-click="vm.publish(false)" uib-tooltip="Unpublish Opportunity">
         <i class="fas fa-ban"></i>
       </a>
-
-
 
 
     </div>
@@ -183,17 +203,21 @@
         <div class="col text-center">
           <div ng-if="!vm.isClosed()">
             <p><label class="label label-lg label-success">OPEN</label> &nbsp; <i class="far fa-lg fa-clock"></i>
-              &nbsp;Proposals must be received through this website before <strong>{{ vm.formatDate(vm.opportunity.deadline, true )}}</strong>.</p>
+              &nbsp;Proposals must be received through this website before <strong>{{
+                vm.formatDate(vm.opportunity.deadline, true )}}</strong>.</p>
           </div>
           <div ng-if="vm.isClosed()">
-            <p><label class="label label-lg label-danger">CLOSED</label> &nbsp; This opportunity closed on <strong>{{ vm.formatDate(vm.opportunity.deadline, true) }}</strong>.</p>
+            <p><label class="label label-lg label-danger">CLOSED</label> &nbsp; This opportunity closed on <strong>{{
+              vm.formatDate(vm.opportunity.deadline, true) }}</strong>.</p>
           </div>
 
           <!-- // Non-admin view of assignee AFTER the opportunity is assigned // -->
-          <div class="col text-center" ng-if="vm.opportunity.status !== 'Pending' && !vm.canEdit && vm.opportunity.proposal">
+          <div class="col text-center"
+               ng-if="vm.opportunity.status !== 'Pending' && !vm.canEdit && vm.opportunity.proposal">
             <span class="text-black-50">Opportunity assigned to:</span>
             &nbsp;
-            <img ng-if="!vm.opportunity.proposal.isCompany" class="img-avatar-flat img-avatar-sm" src="{{((vm.opportunity.proposal.user.profileImageURL.substr(0,1) == '/' || vm.opportunity.proposal.user.profileImageURL.substr(0,4) == 'http') ? '' : '/') + vm.opportunity.proposal.user.profileImageURL}}">
+            <img ng-if="!vm.opportunity.proposal.isCompany" class="img-avatar-flat img-avatar-sm"
+                 src="{{((vm.opportunity.proposal.user.profileImageURL.substr(0,1) == '/' || vm.opportunity.proposal.user.profileImageURL.substr(0,4) == 'http') ? '' : '/') + vm.opportunity.proposal.user.profileImageURL}}">
             &nbsp;
             <span ng-if="!vm.opportunity.proposal.isCompany">{{vm.opportunity.proposal.user.displayName}}</span>
             <span ng-if="vm.opportunity.proposal.isCompany">{{vm.opportunity.proposal.businessName}}</span>
@@ -218,7 +242,7 @@
       <div class="col-md-5">
         <dl class="row mb-2">
           <dt class="col-5 text-right text-muted pr-0">Value:</dt>
-          <dd class="col-7 text-left">{{ vm.opportunity.earn|currency }}</span></dd>
+          <dd class="col-7 text-left">{{ vm.opportunity.postedAmount }}</span></dd>
         </dl>
         <dl class="row mb-2">
           <dt class="col-5 text-right text-muted pr-0">Work Location:</dt>
@@ -245,24 +269,27 @@
         <dl class="row mb-2">
           <dt class="col-5 text-right text-muted pr-0">Program:</dt>
           <dd class="col-7 text-left">
-            <a ng-if="vm.opportunity.program" id="programs.view" ui-sref="programs.view({programId:vm.opportunity.program.code})"><i
-                class="fas fa-university"></i> {{vm.opportunity.program.title}}</a>
+            <a ng-if="vm.opportunity.program" id="programs.view"
+               ui-sref="programs.view({programId:vm.opportunity.program.code})"><i
+              class="fas fa-university"></i> {{vm.opportunity.program.title}}</a>
             <span ng-if="!vm.opportunity.program" class="text-muted">No program</span>
           </dd>
         </dl>
         <dl class="row mb-2">
           <dt class="col-5 text-right text-muted pr-0">Project:</dt>
           <dd class="col-7 text-left">
-            <a ng-if="vm.opportunity.project" id="projects.view" ui-sref="projects.view({projectId:vm.opportunity.project.code})"><i
-                class="fas fa-chart-pie"></i> {{vm.opportunity.project.name}}</a>
+            <a ng-if="vm.opportunity.project" id="projects.view"
+               ui-sref="projects.view({projectId:vm.opportunity.project.code})"><i
+              class="fas fa-chart-pie"></i> {{vm.opportunity.project.name}}</a>
             <span ng-if="!vm.opportunity.project" class="text-muted">No project</span>
           </dd>
         </dl>
         <dl class="row">
           <dt class="col-5 text-right text-muted pr-0">Code:</dt>
           <dd class="col-7 text-left">
-            <a ng-if="vm.opportunity.github && vm.opportunity.github.length > 0" href="{{vm.opportunity.github}}" rel="nofollow"
-              target="_blank"><i class="fab fa-github"></i> GitHub Repository</a>
+            <a ng-if="vm.opportunity.github && vm.opportunity.github.length > 0" href="{{vm.opportunity.github}}"
+               rel="nofollow"
+               target="_blank"><i class="fab fa-github"></i> GitHub Repository</a>
           </dd>
         </dl>
       </div>
@@ -279,8 +306,10 @@
 
         <h3 class="opp-detail">Acceptance Criteria</h3>
         <p>This is a <span class="strong">fixed-price</span> opportunity governed by the <a href="/terms/cwu1"
-            target="_blank"><i class="fas fa-download"></i> terms</a> of our lightweight procurement model, <a href="/codewithus"
-            target="_blank">Code With Us</a>.</p> To be paid the fixed price for this opportunity, you need to meet
+                                                                                            target="_blank"><i
+          class="fas fa-download"></i> terms</a> of our lightweight procurement model, <a href="/codewithus"
+                                                                                          target="_blank">Code With
+          Us</a>.</p> To be paid the fixed price for this opportunity, you need to meet
         all
         of the following criteria:</p>
         <p ng-bind-html="vm.opportunity.criteria"></p>
@@ -292,8 +321,10 @@
     <div class="row">
       <div class="col">
         <h3 class="opp-detail">How to Apply</h3>
-        <p>Submit your Proposal before <span class="strong">{{ vm.formatDate(vm.opportunity.deadline, true) }}</span>.</p>
-        <p>We plan to assign this opportunity by <span class="strong">{{ vm.formatDate(vm.opportunity.assignment, false) }}</span> with work to start on
+        <p>Submit your Proposal before <span class="strong">{{ vm.formatDate(vm.opportunity.deadline, true) }}</span>.
+        </p>
+        <p>We plan to assign this opportunity by <span class="strong">{{ vm.formatDate(vm.opportunity.assignment, false) }}</span>
+          with work to start on
           <span class="strong">{{ vm.formatDate(vm.opportunity.start, false) }}</span>.</p>
       </div>
       <div class="col">
