DEVEX-1 currency options and stripe integration

--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -13,6 +13,7 @@
   <!-- Fav Icon -->
   <link href="/{{favicon}}" rel="shortcut icon" type="image/x-icon">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://js.stripe.com/v3/"></script>
 
   <!-- If using an unsupported browser, redirect to the appropriate landing page -->
   <script type="text/javascript">
