--- a/modules/users/client/views/authentication/authentication.client.view.html
+++ b/modules/users/client/views/authentication/authentication.client.view.html
@@ -3,13 +3,21 @@
 
     <div class="row py-5 justify-content-center">
       <div class="col-sm-8 text-light text-center">
-        <h2 class="mb-3"><i class="fab fa-github fa-2x"></i></h2>
-        <h3>You need a GitHub account to Sign In</h3>
+        <div id="sovrin">
+          <h2 class="mb-2"><img style="width: 75px;" src="/modules/core/client/img/brand/favicon.png" alt=""></h2>
+          <div class="btn btn-lg btn-primary my-5" ng-click="vm.callSamlSignin()">Sign in with Self Sovrin Identity
 
-        <div class="btn btn-lg btn-primary my-5" ng-click="vm.callOauthProvider('/api/auth/github')">Sign in with <span class="d-none d-sm-inline-block">your</span>
-          GitHub <span class="d-none d-sm-inline-block">account</span></div>
-        
-        <p>Don't have a GitHub account? <a href="https://github.com">Creating one</a> only takes a minute.</p>
+          </div>
+        </div>
+        <div id="github">
+          <h2 class="mb-2"><i class="fab fa-github fa-2x"></i></h2>
+
+          <div class="btn btn-lg btn-primary my-5" ng-click="vm.callOauthProvider('/api/auth/github')">Sign in with
+            <span class="d-none d-sm-inline-block">your</span>
+            GitHub <span class="d-none d-sm-inline-block">account</span></div>
+
+          <p>Don't have a GitHub account? <a href="https://github.com">Creating one</a> only takes a minute.</p>
+        </div>
       </div>
 
     </div>
