initial heroku commit

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -39,7 +39,7 @@
 
         <li ui-sref-active="active" class="nav-item">
           <a id="authentication.signin" ui-sref="authentication" class="nav-link">
-            <i class="fab fa-lg fa-github" aria-hidden="true"></i> Sign In</a>
+            Sign In</a>
         </li>
       </ul>
 
