commented out livereload

--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -55,10 +55,10 @@
     var recaptchaSiteId = "{{ googleRecaptchaSiteID }}";
   </script>
 
-  {{#if livereload}}
-  <!--Livereload script rendered -->
-  <script type="text/javascript" src="{{host}}:35729/livereload.js"></script>
-  {{/if}}
+<!--  {{#if livereload}}-->
+<!--  &lt;!&ndash;Livereload script rendered &ndash;&gt;-->
+<!--  <script type="text/javascript" src="{{host}}:35729/livereload.js"></script>-->
+<!--  {{/if}}-->
 </body>
 
 </html>
