updated links and html views to move to Sovrin from BCGov verbiage
Signed-off-by: Lynn Bendixsen <lynn@sovrin.org>

--- a/modules/core/client/views/codewithus-ps.view.html
+++ b/modules/core/client/views/codewithus-ps.view.html
@@ -22,7 +22,7 @@
 
     <div class="row justify-content-between">
       <div class="col-sm-8 col-md-9">
-        <p class="lead">If you manage an open source digital product in the British Columbia public sector,
+        <p class="lead">If you manage an open source digital product,
           Code With Us can help you <span style="font-weight: 500;">access talented developers and pay for code
             quickly</span>.</p>
         <p class="lead">Post an opportunity, evaluate Proposals, assign a developer, and get to work!</p>
@@ -34,7 +34,7 @@
 
     <div class="row py-3">
       <div class="col">
-        <a href="https://github.com/BCDevExchange/code-with-us/wiki/2.-For-Public-Sector-Employees:-How-to-Manage-a-Code-With-Us-Opportunity"
+        <a href="https://github.com/sovrin-foundation/sovrin-devexchange/wiki/2.-For-Product-Owner-Employees:-How-to-Manage-a-Code-With-Us-Opportunity"
           title="Read the guide" class="btn btn-lg btn-primary">Read the Guide</a>
       </div>
     </div>
