--- a/modules/core/client/views/codewithus.view.html
+++ b/modules/core/client/views/codewithus.view.html
@@ -14,7 +14,7 @@
             <a class="nav-link active" id="codewithus" ui-sref="codewithus">Developers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="codewithusps" ui-sref="codewithusps">Public Sector Product Managers</a>
+            <a class="nav-link" id="codewithusps" ui-sref="codewithusps">Product Managers</a>
           </li>
         </ul>
       </div>
@@ -22,9 +22,9 @@
 
     <div class="row justify-content-between">
       <div class="col-sm-8 col-md-9">
-        <p class="lead">We know there are tons of brilliant tech professionals like you who never get an
-          opportunity to apply their skills to public service. We want to change that!</p>
-        <p class="lead">Code With Us makes it easy to get paid for contributing to government's digital
+        <p class="lead">We know there are tons of brilliant tech professionals like you who are having trouble
+          connecting with Companies needing your skills. We want to change that!</p>
+        <p class="lead">Code With Us makes it easy to get paid for contributing to open source digital
           services by providing a process that allows you to focus on writing code, not contract paperwork.</p>
         <p class="lead">Here's how it works:</p>
       </div>
@@ -58,7 +58,7 @@
         <div class="p-3 my-3 border rounded bg-light">
           <h4><i class="fas fa-dollar-sign"></i>&nbsp; Get Paid</h4>
           <p>Once the acceptance criteria is met and your code is merged, submit your invoice and expect payment
-            within 30 days. Read more about payment options <a href="https://github.com/BCDevExchange/code-with-us/wiki/4.-Payment">here</a>.</p>
+            within 30 days. Read more about payment options <a href="https://github.com/sovrin-foundation/sovrin-devexchange/wiki/4.-Payment">here</a>.</p>
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
     <div class="row py-5">
       <div class="col">
         <a href="/opportunities" class="btn btn-lg btn-primary">Browse opportunities</a>
-        <a href="https://github.com/BCDevExchange/code-with-us/wiki/3.--For-Developers:-How-to-Apply-on-a-Code-With-Us-Opportunity"
+        <a href="https://github.com/sovrin-foundation/sovrin-devexchange/wiki/3.--For-Developers:-How-to-Apply-on-a-Code-With-Us-Opportunity"
           class="btn btn-lg btn-text-only" target="_blank">Read the guide</a>
       </div>
     </div>
