--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row py-5 text-center text-light">
       <div class="col">
-        <h1>Finding better ways for government and developers to work together.</h1>
+        <h1>Finding better ways for opportunity providers and developers to work together.</h1>
         <a data-automation-id="lnkBrowseOpportunities" href="/opportunities" class="btn btn-lg btn-primary mt-5">Browse Opportunities</a>
       </div>
     </div>
@@ -31,7 +31,6 @@
           <div class="card-body text-center">
             <h2>Code With Us</h2>
             <p class="subtitle"><strong>Commit code.<br>Get paid.</strong></p>
-            <p class="subtitle">Opportunities up to <strong>$70,000</strong></p>
             <a class="btn btn-primary" data-automation-id="button-codewithus" href="/codewithus" title="Learn more about Code With Us">Learn
               More</a>
           </div>
@@ -61,19 +60,18 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-sm-6 text-light text-center">
-        <h3 class="py-5">Join a community of developers, entrepreneurs, and public service innovators who are making
-          public services better.</h3>
+        <h3 class="py-5">Join a community of developers, entrepreneurs, and innovators.</h3>
 
         <div class="pt-3 pb-5"><a href="/authentication" class="btn btn-lg btn-primary">Sign Up</a></div>
 
         <div class="py-5">
-          <h4><i class="fas fa-university"></i> &nbsp; Public Sector Employees</h4>
+          <h4><i class="fas fa-university"></i> &nbsp; Opportunity Provider Employees</h4>
           <p>Raise your profile with developers and build a community around your open source project. Hire talent fast.</p>
         </div>
 
         <div class="py-5">
           <h4><i class="far fa-user-circle"></i> &nbsp; Developers</h4>
-          <p>Discover paid opportunities to contribute to public sector digital projects.</p>
+          <p>Discover paid opportunities to contribute to digital projects.</p>
         </div>
 
       </div>
