--- a/modules/core/client/views/400.client.view.html
+++ b/modules/core/client/views/400.client.view.html
@@ -6,7 +6,7 @@
 			  <span class="fas fa-exclamation-triangle" aria-hidden="true"></span>
 			  <span class="sr-only">Error:</span>
 			  <span ng-if="vm.errorMessage" ng-bind="vm.errorMessage"></span>
-			  <span ng-if="!vm.errorMessage">You made a bad request - naughty! If you'd be so kind as to <a href="https://github.com/BCDevExchange/devex/issues">open an issue and let us know what happened</a>, that'll help us fix it sooner. Thanks!</span>
+			  <span ng-if="!vm.errorMessage">You made an invalid request! If you'd be so kind as to <a href="https://github.com/sovrin-foundation/sovrin-devexchange/issues">open an issue and let us know what happened</a>, that'll help us fix it sooner. Thanks!</span>
 			</div>
 		</div>
 	</div>
