--- a/modules/core/client/views/about.view.html
+++ b/modules/core/client/views/about.view.html
@@ -14,18 +14,10 @@
       <div class="col-sm-9">
         <br><br>
         <blockquote>
-          <p class="subtitle">At the BCDevExchange, we believe in pursuing a better way of doing things. We ask
-            questions and stay curious. What if developers could work more directly with government? What if we could
-            reduce the paperwork in that relationship? What if we imagined a better way to work and then actually built
-            it together? These are the kinds of questions we explore.</p>
+          <p class="subtitle">The Sovrin DevExchange was built to allow companies to easily locate developers with the 
+            skills needed to work on their projects. The Sovrin DevExchange helps reduce some of the overhead in that 
+            relationship and provides the means for company and developer to find each other.</p>
         </blockquote>
-
-        <h3>What We’re Changing</h3>
-        <p>We’re building better ways for government and developers to work together. Based on feedback from public
-          sector partners and B.C.’s tech community, we have designed a self-service web app that speeds up how
-          government accesses the software solutions it needs. For developers, it has never been easier or more
-          attractive to work on government projects and improve public services. The pay is fair, the process is open
-          and you can work directly with program managers in GitHub.</p>
       </div>
     </div>
   </div>
@@ -42,21 +34,20 @@
     <div class="row">
       <div class="col-sm-9">
         <h3>How We Got Here</h3>
-        <p>From the beginning, we published the open source code that powers the BCDevExchange app in GitHub, the
-          popular online code sharing platform, and worked openly to share an ever-expanding number of government
-          digital resources, including code, data and Application Program Interfaces (APIs).</p>
+        <p>The Sovrin Devexchange began with the open source code base that is the base of the BCDevExchange app. Our 
+          new adaptation of that code base is in GitHub and is an open source project intending to provide similar services
+          as the original, but to a much wider audience.</p>
         <h3>Who We Are</h3>
-        <p>We are a team of creative thinkers with diverse backgrounds, some with a deep understanding of how
-          government functions based on years of public service, others with a depth of knowledge and enthusiasm from
-          the private sector.</p>
+        <p>We are a team of developers hoping to provide a means for identity minded companies and developers to join 
+          tegether and produce something incredible!
+        </p>
 
         <div class="container-fluid" style="position: relative; width: 100%; min-height: 305px; overflow-y: hidden; background: url(/modules/core/client/img/photos/conversation.jpg) no-repeat center; background-size: cover;"></div>
 
         <h3>How You Can Help</h3>
-        <p>We know government doesn’t have a monopoly on good ideas, and experience tells us that collaboration between
-          internal and external partners is the path to uncovering the best ideas. We invite you to see what we are
-          doing, and we welcome your advice and contributions on how to evolve the BCDevExchange. Help us discover
-          better ways of working so that government can do its best work.</p>
+        <p>The Sovrin Foundation cannot make this happen all on their own. Experience tells us that collaboration between
+          internal and external contributors leads us to the best ideas. We welcome all who would like to contribute in any way 
+          to the success of the Sovrin DevExchange project.</p>
       </div>
     </div>
   </div>
