--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col text-center">
       <p class="footer-distributed">
-        <a id="ForkThisSite" href="https://github.com/BCDevExchange/devex" target="_blank" analytics-on=""
+        <a id="ForkThisSite" href="https://github.com/sovrin-foundation/sovrin-devexchange" target="_blank" analytics-on=""
            analytics-event="click"
            analytics-category="outbound" analytics-label="github.com/BCDevExchange"><i class="fas fa-code-branch"></i>
           Fork this site</a>
