Changed a few more instances where government or BCGov were mentioned in the text of the website.
Signed-off-by: Lynn Bendixsen <lynn@sovrin.org>

--- a/modules/orgs/client/views/org-add.html
+++ b/modules/orgs/client/views/org-add.html
@@ -45,7 +45,7 @@
 										"title":"Jurisdiction",
 										"id":"businessJurisdiction",
 										"name":"businessJurisdiction",
-										"placeholder":"Where your company is registered (e.g. British Columbia)",
+										"placeholder":"Where your company is registered",
 										"required":"This information is required"
 									}'>
               </form-input>
