--- a/modules/projects/client/views/edit-project.client.view.html
+++ b/modules/projects/client/views/edit-project.client.view.html
@@ -53,7 +53,7 @@
                 <i class="fas fa-question-circle input-help-source" ng-click="ssdesc = !ssdesc"></i>
                 <div class="input-help alert alert-info" data-field="title" ng-show="ssdesc">
                   This is a teaser to interest developers in contributing to your project. Summarize the goals,
-                  end-user benefits and value for British Columbians!
+                  end-user benefits and value!
                 </div>
                 <textarea data-automation-id="text-project-short-description" name="short" data-ng-model="vm.project.short"
                   id="short" class="form-control" cols="30" rows="3" placeholder="A short description of the project"
