fixed branding color and font

--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -12,10 +12,10 @@
       <p class="footer-distributed">
         <a id="ForkThisSite" href="https://github.com/sovrin-foundation/sovrin-devexchange" target="_blank" analytics-on=""
            analytics-event="click"
-           analytics-category="outbound" analytics-label="github.com/BCDevExchange"><i class="fas fa-code-branch"></i>
+           analytics-category="outbound" analytics-label="https://github.com/sovrin-foundation/sovrin-devexchange"><i class="fas fa-code-branch"></i>
           Fork this site</a>
         &nbsp; &nbsp;
-        <a href="mailto:bcdevexchange@gov.bc.ca?" analytics-on=""><i class="fas fa-envelope"></i> Say hi!</a>
+        <a href="mailto:support@sovrin.org" analytics-on=""><i class="fas fa-envelope"></i> Say hi!</a>
         &nbsp; &nbsp;
         <a id="about" href="/about">About</a>
         &nbsp; &nbsp;
